auto-test/tests/chapter_16/valid/extra_credit/switch_on_char_const.c

int main(void) {
    switch ('x') {
        case 1:
            return 1;  
        case 2:
            return 2;  
        case 120:
            return 0;  
        default:
            return -1;  
    }
}