auto-test/tests/chapter_16/invalid_types/extra_credit/case_statement_string.c

int main(void) {
    switch (0) {
        case "foo":
            return 1;
        default:
            return 0;
    }
}